First_Step/data/45/255/grade_comments.txt
-The compilation or preparation of execution has failed
Executable.java:35: error: illegal start of expression
    public static int[] testRandomMyBubbleSort(int n, int seed) {
    ^
Executable.java:35: error: illegal start of expression
    public static int[] testRandomMyBubbleSort(int n, int seed) {
           ^
Executable.java:35: error: ';' expected
    public static int[] testRandomMyBubbleSort(int n, int seed) {
                 ^
Executable.java:35: error: illegal start of expression
    public static int[] testRandomMyBubbleSort(int n, int seed) {
                     ^
Executable.java:35: error: ';' expected
    public static int[] testRandomMyBubbleSort(int n, int seed) {
                      ^
Executable.java:35: error: '.class' expected
    public static int[] testRandomMyBubbleSort(int n, int seed) {
                                                   ^
Executable.java:35: error: ';' expected
    public static int[] testRandomMyBubbleSort(int n, int seed) {
                                                    ^
Executable.java:35: error: ';' expected
    public static int[] testRandomMyBubbleSort(int n, int seed) {
                                                              ^
Executable.java:39: error: reached end of file while parsing
}
 ^
9 errors
Not compiled
